PoC implement HttpClient instead of HttpURLConnection in RestClient
This is WIP and currently a first stage attempt; compiles/runs and KubernetesClient functions correctly (without an extra thread :tada:), but RestClientTest has 2 failures